# simsapa-extensions-and-plugins

./: .gitignore  .gitmodules  LICENSE.txt  Makefile  README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
scripts/: render_html.py
src/: _base.sass  _button.scss  _dark_light_mode_mixin.sass  _input.scss  _ssp_button.scss  _typeahead-standalone-basic.scss  background-chrome.js  background-firefox.js  background.js  content-script.js  docs-user-style.css  helpers.ts  icons.html  manifest-chrome.json  manifest-firefox.json  manifest.json  sidebar.mako.html  sidebar.sass  sidebar.ts  tsconfig.json
src-addon/: addon.ts  appsscript.json  tsconfig.json
src-emacs/: README.md  simsapa.el
src-gdocs/: README.md
src-joplin/: .gitignore  package-lock.json  package.json
src-joplin/src/: index.ts  manifest.json
src-neovim/: README.md
src-neovim/doc/: simsapa-neovim.txt
src-neovim/rplugin/python3/: simsapa-neovim.py
src-obsidian/: Common.ts  README.md  main.ts  manifest.json  package-lock.json  package.json  simsapa-view.ts  styles.sass  webpack.config.js
src/assets/: dict_words_flat_completion_list.json
