[tool.poetry]
name = "simsapa-browser-extension"
version = "0.1.0"
description = ""
authors = ["Gambhiro"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mako = "^1.3.0"
pynvim = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
